--- a/src/nav/index.css
+++ b/src/nav/index.css
@@ -62,6 +62,23 @@
     text-align: center;
 }
 
+.discovery-nav > .view-nav-button[data-name="upload-from-clipboard"]::before {
+    content: '';
+    display: inline-block;
+    vertical-align: text-top;
+    height: 15px;
+    aspect-ratio: 1;
+    margin-left: -3px;
+    margin-right: 5px;
+    mask: url('./img/clipboard.png') no-repeat center / 17px;
+    background-color: currentColor;
+    opacity: .85;
+}
+.discovery-nav > .view-nav-button[data-name="upload-from-clipboard"]:empty:before {
+    margin-left: -7px;
+    margin-right: -7px;
+}
+
 .discovery-nav > .view-nav-button[data-name="github"]::before {
     content: "";
     display: inline-block;
