--- a/src/pages/views-showcase.css
+++ b/src/pages/views-showcase.css
@@ -1,3 +1,5 @@
+@import url('./views-showcase/view-usage-render.css');
+
 .page-views-showcase {
     flex: 1;
     display: flex;
@@ -24,16 +26,49 @@
     width: 220px;
     border-right: 1px solid rgba(170, 170, 170, 0.2);
 }
-.page-views-showcase > .sidebar > .index-page-link {
-    display: block;
-    padding: 3px 11px;
+
+.page-views-showcase > .sidebar > .sidebar-header {
+    display: flex;
+    align-items: stretch;
     margin: 1px;
+    gap: 1px;
+}
+.page-views-showcase > .sidebar > .sidebar-header .index-page-link {
+    display: block;
+    flex: 1;
+    padding: 3px 11px;
     color: var(--discovery-color);
     text-decoration: none;
+    font-size: 13px;
+    text-align: center;
 }
-.page-views-showcase > .sidebar > .index-page-link:hover {
+.page-views-showcase > .sidebar > .sidebar-header .index-page-link:not(.view-selected) {
+    background-color: rgba(189, 120, 255, 25%);
+    cursor: default;
+}
+.page-views-showcase > .sidebar >  .sidebar-header .index-page-link.view-selected:hover {
     background-color: rgba(131, 131, 131, 0.25);
+    cursor: pointer;
 }
+.page-views-showcase > .sidebar >  .sidebar-header .index-page-link::before {
+    content: '↑ ';
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Tahoma, sans-serif;
+}
+.page-views-showcase > .sidebar >  .sidebar-header .index-page-link:not(.view-selected)::before {
+    content: '';
+}
+.page-views-showcase > .sidebar >  .sidebar-header .render-toggle {
+    border-left: 1px solid rgba(170, 170, 170, 0.2);
+    padding-left: 8px;
+    font-size: 11px;
+}
+.page-views-showcase > .sidebar >  .sidebar-header .render-toggle .view-toggle {
+    font-size: 11px;
+    border-radius: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 .page-views-showcase > .sidebar .view-content-filter {
     flex: 1;
     overflow: hidden;
@@ -68,6 +103,9 @@
     padding: 0 24px 20px;
     overflow: hidden;
     overflow-y: scroll;
+}
+.page-views-showcase > .content:has(> :not(.view-h1):first-child) {
+    padding-top: 16px;
 }
 .page-views-showcase > .content > .view-h1 {
     margin-top: 16px;
