--- a/src/pages/views-showcase/view-usage-render.css
+++ b/src/pages/views-showcase/view-usage-render.css
@@ -15,6 +15,11 @@
     border-width: 2px;
     border-radius: 3px;
 }
+.discovery-view-usage .usage-render[data-render-type="text"] > .view-text-render {
+    overflow-x: auto;
+    padding: 16px;
+    margin: -16px;
+}
 .discovery-view-usage .usage-render.demo-fixed {
     --image-preview-bg-color: rgba(119, 119, 119, 0.125);
     margin-top: 29px; 
