Add blockquote view

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -22,6 +22,7 @@
 @import url('./text/alerts.css');
 @import url('./text/app-header.css');
 @import url('./text/badges.css');
+@import url('./text/blockquote.css');
 @import url('./text/headers.css');
 @import url('./text/link.css');
 @import url('./text/image.css');
