--- a/src/views/table/table.css
+++ b/src/views/table/table.css
@@ -1,3 +1,10 @@
+@import url('./table-cell.css');
+@import url('./table-header.css');
+@import url('./table-header-cell.css');
+@import url('./table-footer.css');
+@import url('./table-footer-cell.css');
+@import url('./table-row.css');
+
 .view-table {
     --table-cell-padding-top: 2px;
     --table-cell-padding-right: 8px;
@@ -8,49 +15,6 @@
     line-height: 19px;
     /* border-collapse: collapse; */
     border-spacing: 0;
-}
-
-.view-table > thead {
-    position: sticky;
-    top: 0px;
-    z-index: 1;
-}
-.view-table > thead th {
-    padding:
-        var(--table-cell-padding-top)
-        var(--table-cell-padding-right)
-        var(--table-cell-padding-bottom)
-        var(--table-cell-padding-left);
-    border: solid var(--discovery-background-color);
-    border-width: 1px 1px 1px 0;
-    font-weight: normal;
-    text-align: left;
-    background: #8d8d8d26 no-repeat right 1px center;
-    background-color: color-mix(in srgb, var(--discovery-background-color), #8d8d8d 15%);
-    background-size: 16px;
-    background-clip: padding-box;
-}
-.view-table > thead th:last-child {
-    border-right: none;
-}
-.view-table > thead th.sortable {
-    padding-right: 18px;
-    background-image: url('./table-sortable.svg');
-    cursor: pointer;
-}
-.view-table > thead th.sortable:not(.asc):not(.desc) {
-    background-size: 14px;
-    background-position: right 2px center;
-}
-.view-table > thead th.sortable.asc {
-    background-image: url('./table-sort-asc.svg');
-}
-.view-table > thead th.sortable.desc {
-    background-image: url('./table-sort-desc.svg');
-}
-.view-table > thead th.sortable:hover {
-    background-color: rgba(141, 141, 141, 0.3);
-    background-color: color-mix(in srgb, var(--discovery-background-color), rgba(141, 141, 141) 30%);
 }
 
 .view-table > tbody > .view-table-row:not(:last-child) > td,
