--- a/src/pages/discovery/editor-query.css
+++ b/src/pages/discovery/editor-query.css
@@ -1,3 +1,50 @@
+.page-discovery > .discovery-editor .query-datasets {
+    margin-top: -8px;
+    margin-bottom: 11px;
+    display: flex;
+    gap: 4px;
+    flex-wrap: wrap;
+}
+.page-discovery > .discovery-editor .query-datasets .dataset {
+    position: relative;
+    display: inline-block;
+    padding: 2px 8px 2px 32px;
+    border: 1px solid #2e4155;
+    border-radius: 6px;
+    background-color: #0a66b92e;
+    font-family: var(--discovery-monospace-font-family);
+    line-height: 1.3;
+    box-shadow: 1px 1px 1px #0006;
+}
+.page-discovery > .discovery-editor .query-datasets .dataset::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 32px;
+    height: 100%;
+    mask-image: url('./img/dataset.svg');
+    mask-repeat: no-repeat;
+    mask-position: center;
+    mask-size: 20px;
+    background-color: color-mix(in srgb, #769ec8, var(--discovery-color));
+    opacity: .7;
+}
+.page-discovery > .discovery-editor .query-datasets .dataset__type {
+    display: block;
+    font-size: 9px;
+    color: color-mix(in srgb, #769ec8 65%, #23303f)
+}
+.page-discovery > .discovery-editor .query-datasets .dataset__name {
+    display: block;
+    font-size: 12px;
+    color: color-mix(in srgb, #769ec8, var(--discovery-color));
+}
+.page-discovery > .discovery-editor .query-datasets:empty::before {
+    content: 'No datasets';
+    color: #888;
+}
+
 .page-discovery > .discovery-editor .query-graph {
     position: relative;
     display: flex;
