--- a/src/views/text/image-preview.css
+++ b/src/views/text/image-preview.css
@@ -3,11 +3,10 @@
     display: flex;
     justify-content: center;
     padding: 16px;
-    background-image:
-        linear-gradient(45deg, var(--image-preview-bg-color) 25%, transparent 0, transparent 75%, var(--image-preview-bg-color) 75%),
-        linear-gradient(45deg, var(--image-preview-bg-color) 25%, transparent 0, transparent 75%, var(--image-preview-bg-color) 75%);
+    background-image: repeating-conic-gradient(transparent 0% 25%, var(--image-preview-bg-color) 0% 50%);
     background-position: 0 0, 10px 10px;
     background-size: 20px 20px;
+    background-attachment: fixed;
 }
 
 .view-image-preview .view-image {
